k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kindred-frontend
spec:
  type: ClusterIP
  selector:
    app: kindred-frontend
  ports:
    - port: 80
      targetPort: 80
